syntax = "proto3";
package nvdcve;

message NvdCve {
    string cve_data_type = 1;
    string cve_data_format = 2;
    string cve_data_version = 3;
    string cve_data_number_of_cves = 4;
    string cve_data_timestamp = 5;
    repeated CveItem cve_items = 6;
}

message CveItem {
    Cve cve = 1;
    Configurations configurations = 2;
    Impact impact = 3;
    string published_date = 4;
    string last_modified_date = 5;
}

message Cve {
    string data_type = 1;
    string data_format = 2;
    string data_version = 3;
    CveDataMeta cve_data_meta = 4;
    ProblemType problem_type = 5;
    References references = 6;
    Description description = 7;
}

message CveDataMeta {
    string id = 1;
    string assigner = 2;
}

message ProblemType {
    repeated DescriptionData problem_type_data = 1;
}

message DescriptionData {
    string lang = 1;
    string value = 2;
}

message References {
    repeated ReferenceData reference_data = 1;
}

message ReferenceData {
    string url = 1;
    string name = 2;
    string refsource = 3;
    repeated string tags = 4;
}

message Description {
    repeated DescriptionData description_data = 1;
}

message Configurations {
    string cve_data_version = 1;
    repeated Node nodes = 2;
}

message Node {
    string operator = 1;
    repeated Node children = 2;
    repeated CpeMatch cpe_match = 3;
}

message CpeMatch {
    bool vulnerable = 1;
    string cpe23_uri = 2;
    string version_start_excluding = 3;
    string version_end_excluding = 4;
    repeated string cpe_name = 5;
}

message Impact {
    BaseMetricV3 base_metric_v3 = 1;
    BaseMetricV2 base_metric_v2 = 2;
}

message BaseMetricV3 {
    CvssV3 cvss_v3 = 1;
    double exploitability_score = 2;
    double impact_score = 3;
}

message CvssV3 {
    string version = 1;
    string vector_string = 2;
    string attack_vector = 3;
    string attack_complexity = 4;
    string privileges_required = 5;
    string user_interaction = 6;
    string scope = 7;
    string confidentiality_impact = 8;
    string integrity_impact = 9;
    string availability_impact = 10;
    double base_score = 11;
    string base_severity = 12;
}

message BaseMetricV2 {
    CvssV2 cvss_v2 = 1;
    string severity = 2;
    double exploitability_score = 3;
    double impact_score = 4;
    bool ac_insuf_info = 5;
    bool obtain_all_privilege = 6;
    bool obtain_user_privilege = 7;
    bool obtain_other_privilege = 8;
    bool user_interaction_required = 9;
}

message CvssV2 {
    string version = 1;
    string vector_string = 2;
    string attack_vector = 3;
    string attack_complexity = 4;
    string confidentiality_impact = 5;
    string integrity_impact = 6;
    string availability_impact = 7;
    double base_score = 8;
}
